--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,7 +6,7 @@ This file contains the general and shared style of your application.
  */
 body {
   margin: 0;
-  padding: 0;
+  padding-top: 2em;
   min-width: 100vw;
   min-height: 100vh;
   font-family: $fontDefault;
