--- a/src/styles/views/Game.scss
+++ b/src/styles/views/Game.scss
@@ -12,17 +12,18 @@
     background: $background;
     padding: 1.5em;
     border-radius: $borderRadius;
-    display: flex;
+    display: block;
     flex-direction: column;
     align-items: center;
     box-shadow: $dropShadow;
+    width: 20em;
   }
   &.user-list {
     list-style: none;
     padding-left: 0;
   }
   &.user-item {
-    display: flex;
+    display: inline-block;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -33,14 +34,20 @@
 }
 
 .player {
-  &.container {
-    margin: 0.5em 0;
-    width: 20em;
-    padding: 10px;
+  &.container{
+    padding: 6px;
+    background: lighten($background,5);
+    border: none;
     border-radius: $borderRadius;
+    display: block;
+    margin: 0.1em;
+    width: 100%;
+    color: $accent;
     display: flex;
-    align-items: center;
-    background: lighten($background, 5);
+    flex-direction: row;
+  }
+  &:hover{
+    background: lighten($background,10);
   }
   &.name {
     font-weight: 300;
@@ -52,8 +59,9 @@
   }
   &.id {
     margin-left: auto;
-    margin-right: 10px;
+    margin-right: 5px;
     font-family: $fontMono;
     font-weight: 300;
   }
+
 }
