--- a/src/styles/views/Register.scss
+++ b/src/styles/views/Register.scss
@@ -1,10 +1,9 @@
 @import "../theme";
 
-.login {
+.register{
   &.container {
     margin-top: 2em;
     min-height: 200px;
-    /* we include the center mixin defined in _theme.scss and save three duplicate lines :) */
     @include center;
     flex-direction: column;
     row-gap: 2em;
@@ -15,7 +14,7 @@
     justify-content: center;
     width: 60%;
     max-width: 30em;
-    height: 22em;
+    height: 27em;
     font-size: 16px;
     font-weight: 300;
     padding-left: 37px;
@@ -25,13 +24,13 @@
     transition: opacity 0.5s ease, transform 0.5s ease;
     box-shadow: $dropShadow;
   }
-  &.register{
+  &.login{
     display: inline-block;
     flex-direction: column;
     justify-content: center;
     width: 60%;
     max-width: 30em;
-    height: 10em;
+    height: 9em;
     font-size: 16px;
     font-weight: 300;
     padding-left: 37px;
@@ -41,12 +40,12 @@
     transition: opacity 0.5s ease, transform 0.5s ease;
     box-shadow: $dropShadow;
   }
-  &.field {
+  &.field{
     display: flex;
     flex-direction: column;
     justify-content: center;
   }
-  &.input {
+  &.input{
     height: 35px;
     padding-left: 15px;
     margin-left: -4px;
@@ -65,6 +64,6 @@
   &.button-container {
     display: flex;
     justify-content: center;
-    margin-top: 2em;
+    margin-top: 1em;
   }
 }
