Changed Background, deleted header and created searchbar

--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -12,6 +12,7 @@ $accent: #97ABFF;
 $accentDark: #123597;
 $textColor: white;
 $background: #262632;
+$background-image: '../assets/images/Background.png ';
 
 /* some constants */
 
