--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,7 +10,10 @@ body {
     min-width: 100vw;
     min-height: 100vh;
     font-family: $fontDefault;
-    background-image: linear-gradient(135deg, $accent 10%, $accentDark 100%);
+    background-image: url("../../assets/images/Background.png");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 input,
