--- a/src/styles/views/Login.scss
+++ b/src/styles/views/Login.scss
@@ -2,14 +2,17 @@
 
 .login {
     &.container {
-        margin-top: 2em;
-        min-height: 200px;
         /* we include the center mixin defined in _theme.scss and save three duplicate lines :) */
         @include center;
         flex-direction: column;
         row-gap: 2em;
-    }
+        background-image: url("../../../assets/images/BoardgameBox.png");
+        background-size: cover;
+        background-repeat: no-repeat;
+        min-height: 900px;
+        margin: auto;
 
+    }
     &.form {
         display: block;
         flex-direction: column;
