--- a/src/styles/views/Register.scss
+++ b/src/styles/views/Register.scss
@@ -2,11 +2,14 @@
 
 .register {
     &.container {
-        margin-top: 2em;
-        min-height: 200px;
         @include center;
         flex-direction: column;
         row-gap: 2em;
+        background-image: url("../../../assets/images/BoardgameBox.png");
+        background-size: cover;
+        background-repeat: no-repeat;
+        min-height: 900px;
+        margin: auto;
     }
 
     &.form {
