--- a/src/styles/views/Game.scss
+++ b/src/styles/views/Game.scss
@@ -39,14 +39,15 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        margin-top: 1em;
     }
     &.search-input{
         height: 35px;
         padding-left: 15px;
-        margin-left: -4px;
+        margin-left: 4px;
         border: none;
         border-radius: 0.75em;
-        margin-bottom: 20px;
+        margin-bottom: 5px;
         background: transparentize(white, 0.85);
         color: $textColor;
         width: 100%;
@@ -64,7 +65,7 @@
         border: none;
         border-radius: $borderRadius;
         display: block;
-        margin: 0.1em;
+        margin-bottom: 0.5em;
         width: 100%;
         color: $accent;
         display: flex;
