--- a/src/styles/views/Login.scss
+++ b/src/styles/views/Login.scss
@@ -5,13 +5,11 @@
         /* we include the center mixin defined in _theme.scss and save three duplicate lines :) */
         @include center;
         flex-direction: column;
-        row-gap: 2em;
         background-image: url("../../../assets/images/BoardgameBox.png");
         background-size: cover;
         background-repeat: no-repeat;
         min-height: 900px;
         margin: auto;
-
     }
     &.form {
         display: block;
@@ -19,7 +17,6 @@
         justify-content: center;
         width: 60%;
         max-width: 30em;
-        height: 22em;
         font-size: 16px;
         font-weight: 300;
         padding-left: 37px;
@@ -28,8 +25,8 @@
         background-color: $background;
         transition: opacity 0.5s ease, transform 0.5s ease;
         box-shadow: $dropShadow;
+        margin-bottom: 2em;
     }
-
     &.register {
         display: inline-block;
         flex-direction: column;
@@ -46,13 +43,11 @@
         transition: opacity 0.5s ease, transform 0.5s ease;
         box-shadow: $dropShadow;
     }
-
     &.field {
         display: flex;
         flex-direction: column;
         justify-content: center;
     }
-
     &.input {
         height: 35px;
         padding-left: 15px;
@@ -63,17 +58,13 @@
         background: transparentize(white, 0.85);
         color: $textColor;
     }
-
-    &.label {
-        color: $textColor;
-        margin-bottom: 10px;
-        text-transform: lowercase;
-        font-weight: 300;
-    }
-
     &.button-container {
         display: flex;
         justify-content: center;
-        margin-top: 2em;
+        margin-bottom: 2em;
+    }
+    h1{
+        color: #FFC33A;
+        font-size: 2.7em;
     }
 }
