--- a/src/styles/views/Profile.scss
+++ b/src/styles/views/Profile.scss
@@ -14,7 +14,7 @@
     &.container {
         width: 30em;
         background: $background;
-        padding: 1.5em;
+        padding: 1em;
         border-radius: $borderRadius;
         display: block;
         flex-direction: column;
@@ -43,7 +43,7 @@
         justify-content: center;
         column-gap: 10%;
         margin: 2em;
-        padding: 1em;
+        padding: 0.5em;
     }
 }
 
@@ -54,7 +54,6 @@
         padding: 10px;
         border-radius: $borderRadius;
         display: flex;
-        align-items: center;
         background: lighten($background, 5);
     }
 
@@ -67,7 +66,49 @@
 
     &.description {
         font-weight: 300;
-        margin-left: 5px;
+        margin-left: 2em;
         display: block
     }
 }
+
+.achievements{
+    &.container{
+        display: grid;
+        grid-template-columns: repeat(5,3em);
+        grid-template-rows: repeat(3, 30px);
+    }
+    .circle-container{
+        position:relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .circle{
+        width: 20px;
+        height: 20px;
+        border: 2px solid $accent;
+        border-radius: 50%;
+        background-color: #FFC33A;
+    }
+    .description-container{
+        position: absolute;
+        bottom: 100%;
+        left: 50%;
+        transform: translateX(-50%);
+        background-color: #040931;
+        color: $textColor;
+        padding: 5px 10px;
+        border-radius: $borderRadius;
+        opacity: 0;
+        visibility: hidden;
+        transition: opacity 0.3s, visibility 0.3s;
+        white-space: nowrap;
+        font-size: 0.75rem;
+    }
+    .circle-container:hover .description-container{
+        opacity: 1;
+        visibility: visible;
+    }
+}
+
+
