--- a/src/styles/views/Register.scss
+++ b/src/styles/views/Register.scss
@@ -4,7 +4,6 @@
     &.container {
         @include center;
         flex-direction: column;
-        row-gap: 2em;
         background-image: url("../../../assets/images/BoardgameBox.png");
         background-size: cover;
         background-repeat: no-repeat;
@@ -18,7 +17,6 @@
         justify-content: center;
         width: 60%;
         max-width: 30em;
-        height: 27em;
         font-size: 16px;
         font-weight: 300;
         padding-left: 37px;
@@ -27,6 +25,7 @@
         background-color: $background;
         transition: opacity 0.5s ease, transform 0.5s ease;
         box-shadow: $dropShadow;
+        margin-bottom: 2em;
     }
 
     &.login {
@@ -74,5 +73,10 @@
         display: flex;
         justify-content: center;
         margin-top: 1em;
+        margin-bottom: 2em;
+    }
+    h1{
+        color: #FFC33A;
+        font-size: 2.7em;
     }
 }
