--- a/src/styles/views/Edit.scss
+++ b/src/styles/views/Edit.scss
@@ -3,7 +3,7 @@
 .profile {
     &.box-image{
         @include center;
-        background-image: url("../../../assets/backgrounds/BoardgameBox.png");
+        background-image: url("../../assets/backgrounds/BoardgameBox.png");
         background-size: 1165px;
         background-repeat: no-repeat;
         background-position: center;
