--- a/src/styles/views/Board.scss
+++ b/src/styles/views/Board.scss
@@ -9,12 +9,17 @@ body.scrollbar-removal{
     max-width: 100%;
     max-height: 100vh;
     object-fit: contain; 
-  }
+}
+
+.board-overlay{
+    position: absolute;
+}
 
 .board-container{
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100dvh;
     width: 100vw;
-  }
+}
