--- a/src/styles/views/Board.scss
+++ b/src/styles/views/Board.scss
@@ -11,8 +11,18 @@ body.scrollbar-removal{
     object-fit: contain; 
 }
 
+.figurine-picture {
+    position: absolute;
+}
+
 .board-overlay{
     position: absolute;
+}
+
+.figurine-overlay{
+    position: absolute;
+    width: 100%;
+    height: 100%;
 }
 
 .board-container{
