--- a/src/styles/views/Lobby.scss
+++ b/src/styles/views/Lobby.scss
@@ -5,7 +5,7 @@
         /* we include the center mixin defined in _theme.scss and save three duplicate lines :) */
         @include center;
         flex-direction: column;
-        background-image: url("../../../assets/images/BoardgameBox.png");
+        background-image: url("../../assets/backgrounds/BoardgameBox.png");
         background-size: cover;
         background-repeat: no-repeat;
         min-height: 900px;
