--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -23,7 +23,7 @@ $SMALL_WIDTH: 768px;
 
 /* some standard elements */
 /* fonts */
-$fontDefault: "M PLUS Rounded 1c", sans-serif;
+$fontDefault: "Arial", "Helvetica", sans-serif;
 $fontMono: "Roboto Mono", monospace;
 
 /* a standard drop shadow */
