--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,7 +7,7 @@ This file contains the general and shared style of your application.
 body {
     margin: 0;
     padding-top: 2em;
-    min-width: 100vw;
+    min-width: calc(100vw - (100vw - 100%));
     min-height: 100vh;
     font-family: $fontDefault;
     background-image: url("../assets/backgrounds/Background.png");
