--- a/src/styles/views/Board.scss
+++ b/src/styles/views/Board.scss
@@ -11,7 +11,7 @@ body.scrollbar-removal{
     object-fit: contain; 
 }
 
-.figurine-picture {
+.overlay-picture {
     position: absolute;
 }
 
@@ -19,7 +19,17 @@ body.scrollbar-removal{
     position: absolute;
 }
 
+.arrow-overlay{
+    position: absolute;
+}
+
 .figurine-overlay{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+.arrow-overlay{
     position: absolute;
     width: 100%;
     height: 100%;
