Selection of wincondition, ultimateAttack and teammember work now
Solves issues:
Frontend:
- #91
- #30
- #29
- #7
- #27
- #26
- #28 (maybe)

--- a/src/styles/views/Selection.scss
+++ b/src/styles/views/Selection.scss
@@ -12,6 +12,7 @@
     }
     &.card-container{
         display: flex;
+        flex-direction: row;
         background: transparent;
         animation-name: slideDown;
         animation-duration: 1s;
