--- a/src/styles/views/Board.scss
+++ b/src/styles/views/Board.scss
@@ -59,13 +59,20 @@ body.scrollbar-removal{ //overrides global css style
         padding: 1em;
         flex-direction: column;
         margin-top: 5vh;
-        height: calc(70vh/3*2); 
+        height: calc(60vh/3*2); 
     }
     &-turn{
         margin-top: 5vh;
         padding: 1em;
         justify-content: center;
         font-size: max(12.5pt, min(50pt, 5vh));
+        
+    }
+    &-win{
+        margin-top: 3vh;
+        padding: 1em;
+        justify-content: center;
+        font-size: max(5pt, min(20pt, 2vh));
         
     }
 }
