--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@100;300;400;500;700;800;900&family=Roboto+Mono:wght@300;400;500;700&display=swap");
 @import "./theme";
 
+@font-face {
+    font-family: 'mario-party';
+    src: local('mario-party'), url(../assets/fonts/Mario-Party-Hudson-Font.ttf) format('truetype');}
+
 /**
 This file contains the general and shared style of your application.
  */
