--- a/src/styles/views/Board.scss
+++ b/src/styles/views/Board.scss
@@ -110,9 +110,44 @@ $box-bg-colour: #fff5;
         white-space: nowrap;
         overflow: hidden;
     }
-    &-audio{
-        margin-top: status-font-size(-1);
-        transform: translate(0%, -10%);
+    &-audio-box{
+        width: 100%;
+        height: 3.7vh;
+        // position: relative;
+    }
+    &-audio-slider {
+        margin:0%;
+        margin-bottom: status-font-size(2);
+        
+        -webkit-appearance: none;
+        appearance: none;
+        width: 100%;
+        height: status-font-size(1.4);
+        background: #e9e9ed;
+        
+        border-radius: status-font-size(.7);
+        border-style: solid;
+        border-color: #8f8f9d;
+        border-width: status-font-size(.3);
+        cursor: pointer; 
+
+        &:hover{
+            background: #d0d0d7;
+            border-color: #676774;
+
+        }
+        
+        &::-moz-range-thumb, &::-webkit-slider-thumb {
+            -webkit-appearance: none;  
+            appearance: none;
+            width: status-font-size(2.6);
+            height: status-font-size(2.6);
+            background: #676774;
+            border-color: #fff;
+            &:hover{
+                background: #ff0;
+            }
+        }
     }
 }
 
