--- a/src/styles/views/Board.scss
+++ b/src/styles/views/Board.scss
@@ -110,42 +110,52 @@ $box-bg-colour: #fff5;
         white-space: nowrap;
         overflow: hidden;
     }
-    &-audio-box{
-        width: 100%;
-        height: 3.7vh;
-        // position: relative;
-    }
-    &-audio-slider {
-        margin:0%;
-        margin-bottom: status-font-size(2);
-        
-        -webkit-appearance: none;
-        appearance: none;
-        width: 100%;
-        height: status-font-size(1.4);
-        background: #e9e9ed;
-        
-        border-radius: status-font-size(.7);
-        border-style: solid;
-        border-color: #8f8f9d;
-        border-width: status-font-size(.3);
-        cursor: pointer; 
-
-        &:hover{
-            background: #d0d0d7;
-            border-color: #676774;
+    &-audio{
+        &-box{
+            width: 100%;
+            height: 3.7vh;
+            display: flex;
+            justify-content: space-evenly;
+        }
+        &-logo{
+            height: 70%;
+            aspect-ratio: 1;
+            transform: translate(0%, -50%);
+            margin-right: status-font-size(.5);
 
         }
-        
-        &::-moz-range-thumb, &::-webkit-slider-thumb {
-            -webkit-appearance: none;  
+        &-slider {
+            margin:0%;
+            margin-bottom: status-font-size(2);
+            
+            -webkit-appearance: none;
             appearance: none;
-            width: status-font-size(2.6);
-            height: status-font-size(2.6);
-            background: #676774;
-            border-color: #fff;
+            width: 90%;
+            height: status-font-size(1.4);
+            background: #e9e9ed;
+            
+            border-radius: status-font-size(.7);
+            border-style: solid;
+            border-color: #8f8f9d;
+            border-width: status-font-size(.3);
+            cursor: pointer; 
+
             &:hover{
-                background: #ff0;
+                background: #d0d0d7;
+                border-color: #676774;
+
+            }
+            
+            &::-moz-range-thumb, &::-webkit-slider-thumb {
+                -webkit-appearance: none;  
+                appearance: none;
+                width: status-font-size(2.6);
+                height: status-font-size(2.6);
+                background: #676774;
+                border-color: #fff;
+                &:hover{
+                    background: #ff0;
+                }
             }
         }
     }
