--- a/src/styles/views/Board.scss
+++ b/src/styles/views/Board.scss
@@ -113,24 +113,25 @@ $box-bg-colour: #fff5;
     &-audio{
         &-box{
             width: 100%;
-            height: 3.7vh;
+            height: status-font-size(3.7);
+            padding-bottom: status-font-size(2);
             display: flex;
-            justify-content: space-evenly;
+            justify-content: space-between;
+            align-items: center;
         }
         &-logo{
-            height: 70%;
+            height: 200%;
             aspect-ratio: 1;
-            transform: translate(0%, -50%);
             margin-right: status-font-size(.5);
 
         }
         &-slider {
             margin:0%;
-            margin-bottom: status-font-size(2);
+            padding: 0%;
             
             -webkit-appearance: none;
             appearance: none;
-            width: 90%;
+            width: 100%;
             height: status-font-size(1.4);
             background: #e9e9ed;
             
@@ -176,12 +177,10 @@ $item-container-width: 23vh;
     display: grid;
     width: 100%;
     height: $item-container-width;
-    grid-template-columns: repeat(5, 10fr);
+    grid-template-columns: repeat(5, 1fr);
     grid-template-rows: repeat(3, 0px);
     column-gap: status-font-size(.4);
     row-gap: calc(min(status-font-size(10), 6vh) + .5vh);
-    box-sizing: border-box;
-    overflow: hidden;
 }
 
 .item-picture {
@@ -190,7 +189,6 @@ $item-container-width: 23vh;
     width: 100%;
     max-width: min(status-font-size(10), 6vh);
     border-radius:15%;
-    transition: transform;
 
 }
 
