Added text on selection site to tell the user what he has to do

--- a/src/styles/views/Selection.scss
+++ b/src/styles/views/Selection.scss
@@ -3,12 +3,18 @@
 .Selection{
     &.container{
         @include center;
-        flex-direction: row;
+        flex-direction: column;
         background-size: cover;
         background-repeat: no-repeat;
         min-height: 900px;
         margin: auto;
         row-gap: 2em;
+    }
+    &.text{
+        margin-bottom: 1em;
+        font-size: 30px;
+        color: $textColor;
+        font: $fontDefault;
     }
     &.card-container{
         display: flex;
