Added game descriptions

--- a/src/styles/views/Lobby.scss
+++ b/src/styles/views/Lobby.scss
@@ -94,3 +94,12 @@
 
 }
 
+.Game{
+    &.text{
+        color: $textColor;
+    }
+    &.h2{
+        color: $accent;
+        font-weight: bold;
+    }
+}
