didn't like the text colour, now changed

--- a/src/styles/views/Lobby.scss
+++ b/src/styles/views/Lobby.scss
@@ -96,7 +96,7 @@
 
 .Game{
     &.text{
-        color: $textColor;
+        color: darken($textColor, 10);
     }
     &.h2{
         color: $accent;
