--- a/src/styles/views/Board.scss
+++ b/src/styles/views/Board.scss
@@ -6,8 +6,8 @@ body.scrollbar-removal{ //overwrites global css style
 }
 
 .board-background{
-    width: 100%;
-    height: 100vh;
+    max-width: 100%;
+    max-height: 100vh;
     object-fit: contain; 
 }
 
