--- a/src/styles/views/Board.scss
+++ b/src/styles/views/Board.scss
@@ -407,3 +407,36 @@ $item-container-width: 23vh;
 .moves-left{
     font-family: "mario-party", Arial, Helvetica, sans-serif;
 }
+
+button {
+    background-color: #4CAF50; 
+    color: white; 
+    border: none; 
+    cursor: pointer;    
+    outline: none; 
+    display: inline-block; 
+    text-align: center; 
+    vertical-align: middle; 
+    padding-left: status-font-size(1);
+    padding-right: status-font-size(1);
+    width: auto; 
+    height: status-font-size(5); 
+    font-size: status-font-size(3.4); 
+    font-family: "Arial", sans-serif; 
+    border-radius: .3em;
+    margin: status-font-size(.25); 
+  }
+  button:hover {
+    background-color: #3e8e41; 
+  }
+  button:active {
+    background-color: #3e8e41; 
+    box-shadow: 0 5px #666; 
+  }
+  button:disabled {
+    background-color: #cccccc; 
+    color: #666666; 
+    cursor: not-allowed; 
+    box-shadow: none; 
+    opacity: 0.7; 
+  }
