--- a/src/styles/views/Board.scss
+++ b/src/styles/views/Board.scss
@@ -3,7 +3,39 @@ body.scrollbar-removal{ //overwrites global css style
     margin: 0;
     padding: 0;
     overflow: hidden;
+
+button {
+    background-color: #4CAF50; 
+    color: white; 
+    border: none; 
+    cursor: pointer;    
+    outline: none; 
+    display: inline-block; 
+    text-align: center; 
+    vertical-align: middle; 
+    padding-left: status-font-size(1);
+    padding-right: status-font-size(1);
+    width: auto; 
+    height: status-font-size(5); 
+    font-size: status-font-size(3.2); 
+    font-family: "Arial", sans-serif; 
+    border-radius: .3em;
+    margin: status-font-size(5); 
+  }
+  button:hover {
+    background-color: #3e8e41; 
+  }
+  button:active {
+    background-color: #3e8e41; 
+  }
+  button:disabled {
+    background-color: #cccccc; 
+    color: #666666; 
+    cursor: not-allowed; 
+    opacity: 0.7; 
+  }
 }
+
 
 .board-background{
     max-width: 100%;
@@ -408,35 +440,3 @@ $item-container-width: 23vh;
     font-family: "mario-party", Arial, Helvetica, sans-serif;
 }
 
-button {
-    background-color: #4CAF50; 
-    color: white; 
-    border: none; 
-    cursor: pointer;    
-    outline: none; 
-    display: inline-block; 
-    text-align: center; 
-    vertical-align: middle; 
-    padding-left: status-font-size(1);
-    padding-right: status-font-size(1);
-    width: auto; 
-    height: status-font-size(5); 
-    font-size: status-font-size(3.4); 
-    font-family: "Arial", sans-serif; 
-    border-radius: .3em;
-    margin: status-font-size(.25); 
-  }
-  button:hover {
-    background-color: #3e8e41; 
-  }
-  button:active {
-    background-color: #3e8e41; 
-    box-shadow: 0 5px #666; 
-  }
-  button:disabled {
-    background-color: #cccccc; 
-    color: #666666; 
-    cursor: not-allowed; 
-    box-shadow: none; 
-    opacity: 0.7; 
-  }
